--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<header>
-			<img src="tic-tac-toe-icon.svg" alt="tic tac toe icon" style="width: 10rem" />
+			<h1>TIC TAC TOE</h1>
 		</header>
 		<div id="root"></div>
 		<script type="module" src="/src/main.jsx"></script>
